Updated tox.ini and fixed unused import and spelling. Updated Readme to reflect that it now tested with SageMath v9.6, 9.7 and v10.0.

--- a/tox.ini
+++ b/tox.ini
@@ -4,16 +4,18 @@
 [tox]
 envlist = doctest, coverage, pycodestyle, relint, codespell, flake8
 skipsdist = true
+requires =
+     tox>=3.18
 
 [testenv]
 setenv =
     SAGE=sage
     HOME={toxinidir}
-whitelist_externals =
+commands = tox -c {toxinidir}/tox.ini -e {envname} -- {posargs}
+allowlist_externals =
     {env:SAGE}
     tox
-
-commands = tox -c {toxinidir}/tox.ini -e {envname} -- {posargs}
+    find
 
 [testenv:doctest]
 description =
