--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,6 @@ commands = tox -c {toxinidir}/tox.ini -e {envname} -- {posargs}
 allowlist_externals =
     {env:SAGE}
     tox
-    find
 
 [testenv:doctest]
 description =
@@ -40,7 +39,7 @@ count = True
 description =
     Check against PEP8 style conventions.
 deps = pycodestyle
-whitelist_externals = pycodestyle
+allowlist_externals = pycodestyle
 commands = pycodestyle {posargs:{toxinidir}/src/}
 
 [testenv:relint]
@@ -50,7 +49,7 @@ description =
 # https://github.com/codingjoe/relint
 # The patterns are in .relint.yaml
 deps = relint
-whitelist_externals = find
+allowlist_externals = find
 commands = find {posargs:{toxinidir}/src/} -exec relint -c {toxinidir}/.relint.yaml \{\} +
 
 [testenv:codespell]
