Updated tests, removed some unused imports and added flake8 rst check to tox

--- a/tox.ini
+++ b/tox.ini
@@ -76,3 +76,9 @@ description =
     check for misspelled words in source code
 deps = flake8
 commands = flake8 {posargs:{toxinidir}/src/}
+
+[testenv:rst]
+description =
+    validate Python docstrings markup as reStructuredText
+deps = flake8-rst-docstrings
+commands = flake8 --select=RST {posargs:{toxinidir}/sage/}
