--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [build-system]
 requires = [
     "setuptools>=49.6.0",
-    "wheel>=0.36.2",
-    "cython>=0.29.21, <1.0",
+    "cython>=3.0.8,<3.1.0",
     "setuptools_scm[toml]>=6.2",
-        ]
+    "passagemath-environment",
+    "passagemath-flint",
+    "passagemath-modules",
+]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
