setup.cfg: Declare extra 'passagemath'

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,5 +31,12 @@ packages = hilbert_modgroup
 package_dir=
     hilbert_modgroup=src/hilbert_modgroup
 
+[options.extras_require]
+passagemath =
+    passagemath-flint
+    passagemath-gap
+    passagemath-schemes
+    passagemath-repl
+
 [sdist]
 formats = gztar
