tox.ini: Define environment passagemath

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,20 @@ allowlist_externals =
     {env:SAGE}
     tox
 
+[testenv:passagemath]
+usedevelop = True
+skipsdist = False
+extras = passagemath
+
+allowlist_externals =
+    bash
+
+passenv =
+    GITHUB_ACTIONS
+
+commands =
+    bash -c "PYTHONPATH={toxinidir}/src sage -t -p --force-lib $([ -n \"$GITHUB_ACTIONS\" ] && echo \"--format github\") --environment=sage.all__sagemath_schemes {posargs:{toxinidir}/src/}"
+
 [testenv:doctest]
 description =
    run Sage the Sage doctester (same as "sage -t")
