Update doctest environment, passagemath dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,10 +33,13 @@ package_dir=
 
 [options.extras_require]
 passagemath =
+    fpylll
     passagemath-flint
     passagemath-gap
-    passagemath-schemes
+    passagemath-groups
     passagemath-repl
+    passagemath-schemes
+    passagemath-symbolics
 
 [sdist]
 formats = gztar
