update configuration and imports to work with passagemath

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,10 +36,13 @@ passagemath =
     fpylll
     passagemath-flint
     passagemath-gap
+    passagemath-objects
+    passagemath-categories
     passagemath-groups
     passagemath-repl
     passagemath-schemes
     passagemath-symbolics
+    passagemath-plot
 
 [sdist]
 formats = gztar
