--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ passenv =
     GITHUB_ACTIONS
 
 commands =
-    bash -c "PYTHONPATH={toxinidir}/src sage -t -p --force-lib $([ -n \"$GITHUB_ACTIONS\" ] && echo \"--format github\") --environment=_doctest_environment {posargs:{toxinidir}/src/}"
+    bash -c "PYTHONPATH={toxinidir} sage -t -p --force-lib $([ -n \"$GITHUB_ACTIONS\" ] && echo \"--format github\") --environment=_doctest_environment {posargs:{toxinidir}/src/}"
 
 [testenv:doctest]
 description =
