feat: update tox to also cover the example directory

--- a/tox.ini
+++ b/tox.ini
@@ -34,14 +34,14 @@ commands =
 description =
    run Sage the Sage doctester (same as "sage -t")
 commands =
-    {env:SAGE} -t -p 0 {posargs:{toxinidir}/src/}
+    {env:SAGE} -t -p 0 {posargs:{toxinidir}/src/} {posargs:{toxinidir}/examples}
 
 [testenv:coverage]
 description =
     give information about doctest coverage of files
     (same as "sage --coverage[all]")
 commands =
-    {env:SAGE} --coverage {posargs:{toxinidir}/src/}
+    {env:SAGE} --coverage {posargs:{toxinidir}/src/} {posargs:{toxinidir}/examples}
 
 [pycodestyle]
 max-line-length = 99
@@ -54,7 +54,7 @@ description =
     Check against PEP8 style conventions.
 deps = pycodestyle
 allowlist_externals = pycodestyle
-commands = pycodestyle {posargs:{toxinidir}/src/}
+commands = pycodestyle {posargs:{toxinidir}/src/} {posargs:{toxinidir}/examples}
 
 [testenv:relint]
 description =
@@ -64,7 +64,7 @@ description =
 # The patterns are in .relint.yaml
 deps = relint
 allowlist_externals = find
-commands = find {posargs:{toxinidir}/src/} -exec relint -c {toxinidir}/.relint.yaml \{\} +
+commands = find {posargs:{toxinidir}/src/} {posargs:{toxinidir}/examples} -exec relint -c {toxinidir}/.relint.yaml \{\} +
 
 [testenv:codespell]
 description =
@@ -73,8 +73,9 @@ description =
 deps = codespell
 commands = codespell \
     --skip="*.so,*.c,*.cpp,.git,.idea,.ipynb_checkpoints,.tox,dist,*.egg-info" \
-    --dictionary=- \
-    {posargs:{toxinidir}/src}
+    --ignore-regex=[A-Za-z0-9+/]{200,} \
+           --dictionary=- \
+    {posargs:{toxinidir}/src} {posargs:{toxinidir}/examples}
 
 [flake8]
 max-line-length = 100
@@ -89,7 +90,7 @@ per-file-ignores =
 description =
     check for misspelled words in source code
 deps = flake8
-commands = flake8 {posargs:{toxinidir}/src/}
+commands = flake8 {posargs:{toxinidir}/src/} {posargs:{toxinidir}/examples}
 
 [testenv:rst]
 description =
