update installation, packaging and build scripts

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 ### tox.ini with parts taken from the sagemath source
 ###
 [tox]
-envlist = doctest, coverage, pycodestyle, relint, codespell, flake8
+envlist = doctest, coverage, pycodestyle, relint, codespell, flake8, passagemath
 skipsdist = true
 requires =
      tox>=4.12
