--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ classifiers = [
 readme = {file = "README.md", content-type = "text/markdown"}
 dynamic = ["version"]
 dependencies = [
-    "passagemath-standard"
+    "passagemath-standard",
+    "passagemath-plot"
     ]
 [project.urls]
 homepage = "https://github.com/fredstro/hilbertmodgroup"
